tests/reference/asr-func_07-4a8c076.stderr
semantic error: Assignment to an input function parameter `this` is not allowed
  --> tests/errors/func_07.py:12:5
   |
12 |     this._len = len(this._buf)
   |     ^^^^ Use InOut[struct StringIO] to allow assignment


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
